# opensim-models

./: .gitignore  .gitmodules  CMakeLists.txt  Copy_of_Tutorial_7_Set_up_OpenSim_Moco_in_Google_Colab.ipynb  README.md  appveyor.yml  test_models.py  test_pipeline_2392.py  update_models.py
Arm26/: CMakeLists.txt  arm26.osim
Arm26/ComputedMuscleControl/: arm26_ComputedMuscleControl_Tasks.xml
Arm26/Geometry/: arm_r_1mc.asc  arm_r_2distph.asc  arm_r_2mc.asc  arm_r_2midph.asc  arm_r_2proxph.asc  arm_r_3distph.asc  arm_r_3mc.asc  arm_r_3midph.asc  arm_r_3proxph.asc  arm_r_4distph.asc  arm_r_4mc.asc  arm_r_4midph.asc  arm_r_4proxph.asc  arm_r_5distph.asc  arm_r_5mc.asc  arm_r_5midph.asc  arm_r_5proxph.asc  arm_r_capitate.asc  arm_r_hamate.asc  arm_r_humerus.asc  arm_r_lunate.asc  arm_r_pisiform.asc  arm_r_radius.asc  arm_r_scaphoid.asc  arm_r_thumbdist.asc  arm_r_thumbprox.asc  arm_r_trapezium.asc  arm_r_trapezoid.asc  arm_r_triquetrum.asc  arm_r_ulna.asc  ground_jaw.asc  ground_r_clavicle.asc  ground_r_scapula.asc  ground_ribs.asc  ground_skull.asc  ground_spine.asc
Arm26/InverseKinematics/: arm26.osim
Arm26/OutputReference/: arm26_with_bucket.osim
Arm26/OutputReference/ComputedMuscleControl/: arm26_Reserve_Actuators.xml  arm26_Setup_ComputedMuscleControl.xml
Arm26/OutputReference/ForwardDynamics/: arm26_Modified_controls.xml  arm26_Setup_Forward.xml
Arm26/OutputReference/InverseDynamics/: arm26_Setup_InverseDynamics.xml
Arm26/OutputReference/InverseKinematics/: arm26.osim  arm26_InverseKinematics.mot  arm26_Setup_InverseKinematics.xml
Arm26/OutputReference/StaticOptimization/: arm26_Setup_StaticOptimization.xml
Gait2354_Simbody_Patellae/: CMakeLists.txt  gait2354_CMC_Actuators.xml  gait2354_CMC_Tasks.xml  gait2354_IK_Tasks.xml  gait2354_RRA1_Actuators.xml.unused  gait2354_RRA1_ControlConstraints.xml.unused  gait2354_RRA1_Tasks.xml.unused  gait2354_RRA2_Actuators.xml.unused  gait2354_RRA2_ControlConstraints.xml.unused  gait2354_RRA2_Tasks.xml.unused  gait2354_RRA_Actuators.xml  gait2354_RRA_ControlConstraints.xml  gait2354_RRA_Tasks.xml  gait2354_Scale_MarkerSet.xml  gait2354_simbody_patellae.osim  subject01_Setup_Analyze.xml  subject01_Setup_AnalyzeTest.xml  subject01_Setup_Analyze_Reactions.xml  subject01_Setup_CMC.xml  subject01_Setup_Forward.xml  subject01_Setup_IK.xml  subject01_Setup_InverseDynamics.xml  subject01_Setup_RRA.xml  subject01_Setup_RRA1.xml.unused  subject01_Setup_RRA2.xml.unused  subject01_Setup_Scale.xml  subject01_scaleSet_applied.xml  subject01_scaledOnly.osim  subject01_scaledOnly_settings.xml  subject01_simbody.osim  subject01_simbody_adjusted.osim  subject01_simbody_adjusted_test.osim  subject01_simbody_adjusted_v16.osim  subject01_static_output.mot  subject01_walk1_ik.mot
Gait2392_Simbody/: CMakeLists.txt  foot_floor_loads.xml  gait2392.osim  gait2392_CMC_Actuators.xml  gait2392_CMC_ControlConstraints.xml  gait2392_CMC_Tasks.xml  gait2392_IK_Tasks.xml  gait2392_RRA_Actuators.xml  gait2392_RRA_ControlConstraints.xml  gait2392_RRA_Tasks.xml  gait2392_SO_Residual_Actuators.xml  gait2392_SO_weak_Residual_Actuators.xml  gait2392_Scale_MarkerSet.xml  gait2392_Scale_MeasurementSet.xml  gait2392_Scale_Tasks.xml  gait2392_simbody.osim  setup_JointReaction.xml  setup_static_optimization.xml  subject01.osim  subject01_Scale_ScaleSet.xml  subject01_Setup_Analyze.xml  subject01_Setup_AnalyzeTest.xml  subject01_Setup_CMC.xml  subject01_Setup_Forward.xml  subject01_Setup_IK.xml  subject01_Setup_InverseDynamics.xml  subject01_Setup_JointReaction_from_RRA.xml  subject01_Setup_JointReaction_from_SO.xml  subject01_Setup_RRA.xml  subject01_Setup_Scale.xml  subject01_adjusted.osim  subject01_simbody_adjusted.osim  subject01_walk1.trc  subject01_walk1_RRA_Kinematics_q.sto  subject01_walk1_grf.xml
Gait2392_Simbody/OutputReference/: subject01_simbody.osim  subject01_simbody_adjusted.osim  subject01_walk1_ik.mot
Gait2392_Simbody/OutputReference/ResultsCMC/: subject01_walk1_Actuation_force.sto  subject01_walk1_Actuation_power.sto  subject01_walk1_Actuation_speed.sto  subject01_walk1_Kinematics_dudt.sto  subject01_walk1_Kinematics_q.mot  subject01_walk1_Kinematics_q.sto  subject01_walk1_Kinematics_u.sto  subject01_walk1_avgResiduals.txt  subject01_walk1_controls.xml  subject01_walk1_pErr.sto  subject01_walk1_pseudo.sto
Gait2392_Simbody/OutputReference/ResultsForward/: subject01_walk1_Actuation_force.sto  subject01_walk1_Actuation_power.sto  subject01_walk1_Actuation_speed.sto  subject01_walk1_BodyKinematics_acc.sto  subject01_walk1_BodyKinematics_pos.sto  subject01_walk1_BodyKinematics_vel.sto  subject01_walk1_Kinematics_dudt.sto  subject01_walk1_Kinematics_q.mot  subject01_walk1_Kinematics_q.sto  subject01_walk1_Kinematics_u.sto  subject01_walk1_controls.sto  subject01_walk1_pseudo.sto
Gait2392_Simbody/OutputReference/ResultsInverseDynamics/: InverseDynamicsOutput.sto
Gait2392_Simbody/OutputReference/ResultsRRA/: subject01_walk1_RRA_Actuation_force.sto  subject01_walk1_RRA_Actuation_power.sto  subject01_walk1_RRA_Actuation_speed.sto  subject01_walk1_RRA_Kinematics_dudt.sto  subject01_walk1_RRA_Kinematics_q.mot  subject01_walk1_RRA_Kinematics_q.sto  subject01_walk1_RRA_Kinematics_u.sto  subject01_walk1_RRA_avgResiduals.txt  subject01_walk1_RRA_controls.sto  (+4 more)
Gait2392_Simbody/Tutorial1/: crouch1.mot  crouch2.mot  crouch3.mot  crouch4.mot  normal.mot
Leg39/: CMakeLists.txt  leg39_ComputedMuscleControl_Tasks.xml  leg39_ControlConstraints.xml  leg39_InitialStates.sto  leg39_Setup_ComputedMuscleControl.xml  leg39_Setup_ForwardDynamics.xml  leg39_Setup_InverseDynamics.xml  leg39_Setup_StaticOptimization.xml  leg39_controls.xml  leg39_muscle_layout.txt
Leg39/OutputReference/: desiredKinematics_padded.sto  desiredKinematics_splinefit_accelerations.sto  leg39_InverseKinematics.mot  leg39_InverseKinematics_Nonuniform_Weights.mot  leg39_InverseKinematics_Uniform_Weights.mot  leg39_controls_psoas_bifemlh_tibant.xml  markers_coords_ik.sto
pipelines/Gait10dof18musc/: CMakeLists.txt
tutorials/Tutorial16 Build a Dynamic Walker/: CMakeLists.txt
(+925 files in other folders)
