SET(ARM26_FILES arm26.osim)
#FILE(GLOB BONE_FILES *.vtp)

#INSTALL_FILES(/Geometry FILES ${BONE_FILES})
INSTALL_FILES(/examples/Arm26/ FILES ${ARM26_FILES})
#INSTALL_FILES(/Models  arm26.osim)

#INSTALL(DIRECTORY bones DESTINATION examples/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ComputedMuscleControl DESTINATION examples/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY InverseKinematics DESTINATION examples/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY InverseDynamics DESTINATION examples/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ForwardDynamics DESTINATION examples/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY StaticOptimization DESTINATION examples/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY OutputReference DESTINATION examples/Arm26/ PATTERN ".svn" EXCLUDE)
