SET(ARM26_FILES arm26.osim)
#FILE(GLOB BONE_FILES *.vtp)

#INSTALL_FILES(/Geometry FILES ${BONE_FILES})
INSTALL_FILES(/Models/Arm26/ FILES ${ARM26_FILES})
#INSTALL_FILES(/Models  arm26.osim)

#INSTALL(DIRECTORY bones DESTINATION Models/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ComputedMuscleControl DESTINATION Models/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY InverseKinematics DESTINATION Models/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY InverseDynamics DESTINATION Models/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ForwardDynamics DESTINATION Models/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY StaticOptimization DESTINATION Models/Arm26/ PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY OutputReference DESTINATION Models/Arm26/ PATTERN ".svn" EXCLUDE)
